<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_spinner">Meal spinner</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="greens">Greens</string>
    <string name="spin">Spin</string>
    <string name="spinned_meals">Spinned meals</string>
    <string name="reset">Reset</string>
    <string name="settings">Settings</string>
    <string name="jackpot_meals">Jackpot meals</string>
    <string name="add_jackpot">Add jackpot</string>
    <string name="add_protein">Add protein</string>
    <string name="add_carbs">Add carbs</string>
    <string name="add_greens">Add greens</string>
    <string name="add">Add</string>
    <string name="in_spinner">In spinner</string>
</resources>