<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/item_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_protein"
        android:text="@string/protein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_margin="4dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_carbs"
        android:text="@string/carbs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_margin="4dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_item_greens"
        android:text="@string/greens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        android:layout_margin="4dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>