<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentSettings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textSize="20sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="parent" />

        <TableLayout
            android:id="@+id/table_settings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <TableRow
                android:gravity="center">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_bonus"
                    android:text="@string/jackpot_meals"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_prot"
                    android:text="@string/protein"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_carbs"
                    android:text="@string/carbs"
                    android:padding="4dp"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_greens"
                    android:text="@string/greens"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_jackpot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_greens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp"/>

            </TableRow>

            <TableRow
                android:gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_jackpot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSecondary"
                    android:padding="4dp"
                    android:hint="@string/add_jackpot">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_jackpot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSecondary"
                    android:padding="4dp"
                    android:hint="@string/add_protein">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_protein"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSecondary"
                    android:padding="4dp"
                    android:hint="@string/add_carbs">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_carbs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_greens"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="filled"
                    app:boxBackgroundColor="?colorSecondary"
                    android:padding="4dp"
                    android:hint="@string/add_greens">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_greens"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:maxLines="1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </com.google.android.material.textfield.TextInputLayout>

            </TableRow>

            <TableRow
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_jackpot"
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="20dp"
                    android:layout_margin="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_protein"
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="20dp"
                    android:layout_margin="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_carbs"
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="20dp"
                    android:layout_margin="4dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_add_greens"
                    android:text="@string/add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="20dp"
                    android:layout_margin="4dp"/>

            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>